# 4deckradio

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  index.html  params.json
gstreamer/: Makefile  Makefile.am  Makefile.simple  audio.c  audio.h  mygstreamer.c  mygstreamer.h
qmusicplayer/: Makefile  mainwindow.cpp  mainwindow.h
simpleplayer/: CMakeLists.txt  main.cpp
